Fix inability to scroll training page on narrow devices

--- a/ui/src/app/components/train/train.component.scss
+++ b/ui/src/app/components/train/train.component.scss
@@ -44,7 +44,11 @@
   }
 }
 
-@media(max-width: 870px) {
+@media(max-width: 950px) {
+  .training-page {
+    height: initial;
+  }
+
   .pipeline-selection {
     display: block;
   }
